agregue img de oferta en seccion contacto

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -78,7 +78,10 @@
         </button>
     </div>
     <br>
-    <h2>¡SUBSCRIBITE Y PARTICIPA DE SORTEOS!</h2>
+    <section class="promos">
+      <img src="../img/ofert.png" class="img-fluid" alt="...">
+      <h2>¡SUBSCRIBITE Y PARTICIPA DE SORTEOS!</h2>
+    </section> 
     <br>
     <form class="row g-3">
         <legend>Formulario de Contacto</legend>
