--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/celular.jpg" class="d-block w-100" height="500">
+            <img src="img/celus.webp" class="d-block w-100" height="500">
           </div>
           <div class="carousel-item">
-            <img src="img/laptop.jpg" class="d-block w-100" height="500">
+            <img src="img/notebooks.webp" class="d-block w-100" height="500">
           </div>
           <div class="carousel-item">
-            <img src="img/joyst.jpg" class="d-block w-100" height="500">
+            <img src="img/consolas.webp" class="d-block w-100" height="500">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
