agregue meta etiquetas

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tienda de electronica dedicada a la venta de notebook, consolas, celulares, y otras tecnologias">
+    <meta name="keywords" content="tecnologia, notebook, consolas, celulares, compra, electronic z">
     <link rel="shortcut icon" href="img/digital.png">
-    <title>Index</title>
+    <title>Electronic Z</title>
    <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" 
       rel="stylesheet" 
